--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev-test-watch": "mocha-typescript-watch",
-    "test": "tsc -p . && mocha",
+    "test": "tsc -p . && mocha --opts mocha.opts ",
+    "test:auto": "tsc -p && mocha --opts mocha.opts --watch",
     "prepublish": "tsc -p ."
   },
   "license": "Apache-2.0",
@@ -22,15 +23,21 @@
     "node": ">= 6.5.0",
     "npm": ">= 3.10.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chai-deep-match": "^1.0.2"
+  },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/chai-deep-match": "github:phreed/ts-typings#chai-deep-match",
     "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.46",
+    "@types/node": "^6.0.48",
+    "chai": "^3.5.0",
     "core-js": "^2.4.1",
     "mocha": "^3.1.2",
     "mocha-typescript": "^1.0.11",
     "node": "0.0.0",
     "nodejs": "0.0.0",
-    "typescript": "^2.0.9"
+    "ts-node": "^1.7.0",
+    "typescript": "^2.1.1"
   }
 }
