prepare things for npm

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
-*.d.ts
-*.js
-*.js.map
+test/*.js
+test/*.d.ts
+test/*.js.map
 
